# dnikit

./: .bumpversion.cfg  .gitattributes  .gitignore  CITATION.cff  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_template.md
notebooks/: canvas-cifar-example.ipynb
notebooks/data_introspection/: IpywidgetsExample.ipynb  Untitled.ipynb  canvas-cifar-example-notebook.ipynb  canvas-cifar-example.ipynb  dataset_report.ipynb  dnikit_with_image_data.pickle
notebooks/data_introspection/canvas_report/: files  script.js
notebooks/data_introspection/report_files/: report_save_data.pkl
src/deepview/: README.md  pyproject.toml
src/deepview/deepview/: __init__.py  _availability.py  _dict_utils.py
src/deepview/tests/: conftest.py  test_batch.py  test_batch_storage_ops.py  test_cached_producer.py  test_covariances.py  test_dataset_report.py  test_dict_utils.py  test_dimension_reduction.py  test_dni_model.py  test_dni_responses.py  test_dni_stub_datasets.py  test_duplicates.py  test_familiarity.py  test_image_processors.py  test_image_producer.py  test_iua.py  test_metadata.py  test_metadata_processors.py  test_multi_introspect.py  test_multivar_gaussian.py  test_pfa.py  test_pipeline.py  test_processors.py  test_producer_ops.py  (+1 more)
src/deepview_canvas/: CITATION.cff  CONTRIBUTING.md  package-lock.json
src/deepview_tensorflow/: pyproject.toml
src/deepview_torch/: pyproject.toml
src/deepview_torch/deepview_torch/: __init__.py  _torch_producer.py
src/deepview_torch/tests/: test_torch_producer.py
src/dnikit_tensorflow/: pyproject.toml
(+267 files in other folders)
